--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.nezha</groupId>
-    <artifactId>httpfetch</artifactId>
+    <artifactId>http-fetch</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
