--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.nezha</groupId>
     <artifactId>http-fetch</artifactId>
-    <version>1.1.2-SNAPSHOT</version>
+    <version>1.1.3</version>
 
     <properties>
         <slf4j.version>1.7.12</slf4j.version>
@@ -24,6 +24,8 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
+
+
             <version>${fast.json}</version>
         </dependency>
 
