--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
     <groupId>com.github.nezha</groupId>
     <artifactId>http-fetch</artifactId>
     <version>1.1.3</version>
+    <name>${project.groupId}:${project.artifactId}</name>
+    <url>https://github.com/youzan/httpfetch</url>
+    <description>It's cool!</description>
 
     <properties>
         <slf4j.version>1.7.12</slf4j.version>
@@ -114,7 +117,19 @@
                     <target>1.7</target>
                 </configuration>
             </plugin>
-
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.10.3</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
@@ -148,14 +163,38 @@
         </testResources>
     </build>
 
+    <licenses>
+        <license>
+            <name>The Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <name>daiqiang</name>
+            <email>569941672@qq.com</email>
+            <roles>
+                <role>developer</role>
+            </roles>
+            <timezone>+8</timezone>
+        </developer>
+    </developers>
+    <scm>
+        <connection>scm:git:https://github.com/youzan/httpfetch.git</connection>
+        <developerConnection>scm:git:https://github.com/youzan/httpfetch.git</developerConnection>
+        <url>https://github.com/youzan/httpfetch</url>
+        <tag>v${project.version}</tag>
+    </scm>
+
     <distributionManagement>
         <repository>
-            <id>releases</id>
+            <id>ossrh</id>
             <name>Nexus Release Repository</name>
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
         <snapshotRepository>
-            <id>snapshots</id>
+            <id>ossrh</id>
             <name>Nexus Snapshot Repository</name>
             <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
         </snapshotRepository>
