--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.nezha</groupId>
     <artifactId>http-fetch</artifactId>
-    <version>1.1.4-SNAPSHOT</version>
+    <version>1.1.4</version>
 
     <properties>
         <slf4j.version>1.7.12</slf4j.version>
